[package]
name = "segment"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync", "signal", "net", "io-util"] }
anyhow = "1.0.66"
thiserror = "1.0.37"
clap = { version = "4.0.18", features = ["derive"] }
tokio-util = "0.7.4"
crossbeam = "0.8.2"
bytes = "1.2.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
atoi = "2.0.0"
parking_lot = "0.12.1"
tokio-test = "0.4.2"
async-recursion = "1.0.0"
sysinfo = "0.26.8"